--- a/index.html
+++ b/index.html
@@ -7,19 +7,64 @@
 </head>
 <body>
 
-  <h1>365 Days of 2026</h1>
+  <h1>365 Days of Buttons</h1>
   <p id="counter"></p>
 
   <div class="jars">
-    <div class="jar">
-      <h2>Remaining Days</h2>
-      <div id="fullJar" class="jar-box"></div>
+
+    <!-- FULL JAR -->
+    <div class="jar-container">
+      <h3>Remaining Days</h3>
+
+      <svg viewBox="0 0 200 300" class="jar-svg">
+        <defs>
+          <linearGradient id="glassFull" x1="0" y1="0" x2="0" y2="1">
+            <stop offset="0%" stop-color="#ffffff" stop-opacity="0.4" />
+            <stop offset="100%" stop-color="#ffffff" stop-opacity="0.1" />
+          </linearGradient>
+
+          <clipPath id="jarClipFull">
+            <rect x="30" y="60" width="140" height="200" rx="20" />
+          </clipPath>
+        </defs>
+
+        <!-- Jar -->
+        <rect x="25" y="40" width="150" height="230" rx="30"
+              fill="url(#glassFull)" stroke="#333" stroke-width="4" />
+
+        <!-- Lid -->
+        <rect x="50" y="20" width="100" height="25" rx="10" fill="#444" />
+
+        <!-- Buttons -->
+        <g id="fullJarButtons" clip-path="url(#jarClipFull)"></g>
+      </svg>
     </div>
 
-    <div class="jar">
-      <h2>Passed Days</h2>
-      <div id="emptyJar" class="jar-box"></div>
+    <!-- EMPTY JAR -->
+    <div class="jar-container">
+      <h3>Passed Days</h3>
+
+      <svg viewBox="0 0 200 300" class="jar-svg">
+        <defs>
+          <linearGradient id="glassEmpty" x1="0" y1="0" x2="0" y2="1">
+            <stop offset="0%" stop-color="#ffffff" stop-opacity="0.4" />
+            <stop offset="100%" stop-color="#ffffff" stop-opacity="0.1" />
+          </linearGradient>
+
+          <clipPath id="jarClipEmpty">
+            <rect x="30" y="60" width="140" height="200" rx="20" />
+          </clipPath>
+        </defs>
+
+        <rect x="25" y="40" width="150" height="230" rx="30"
+              fill="url(#glassEmpty)" stroke="#333" stroke-width="4" />
+
+        <rect x="50" y="20" width="100" height="25" rx="10" fill="#444" />
+
+        <g id="emptyJarButtons" clip-path="url(#jarClipEmpty)"></g>
+      </svg>
     </div>
+
   </div>
 
   <script src="script.js"></script>
