--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h3>Remaining Days</h3>
       <div class="jar">
         <div id="fullJar" class="buttons-layer"></div>
-        <img src="assets/filledjar.png" class="jar-image" alt="Filled jar" />
+        <img src="assets/jar.png" class="jar-image" alt="Filled jar" />
       </div>
     </div>
 
