--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>365 Days of 2026</h1>
+  <h1>365 Days of Buttons</h1>
   <p id="counter"></p>
 
   <div class="jars">
@@ -17,7 +17,7 @@
       <h3>Remaining Days</h3>
       <div class="jar">
         <div id="fullJar" class="buttons-layer"></div>
-        <img src="assets/jar.png" class="jar-image" alt="Filled jar" />
+        <img src="assets/jar.png" class="jar-image" alt="Jar" />
       </div>
     </div>
 
@@ -26,7 +26,7 @@
       <h3>Passed Days</h3>
       <div class="jar">
         <div id="emptyJar" class="buttons-layer"></div>
-        <img src="assets/jar.png" class="jar-image" alt="Empty jar" />
+        <img src="assets/jar.png" class="jar-image" alt="Jar" />
       </div>
     </div>
 
