--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>365 Days of 2026</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <h1>365 Days of Buttons</h1>
+  <h1>365 Days of 2026</h1>
   <p id="counter"></p>
 
   <div class="jars">
